# spmst

./: CMakeLists.txt  Makefile  README.md  get_stations.py  interp.py  license.md  plot_topo.py
EXAMPLES/checkerboard/: generate_veloc.py  out.cpt  plot.sh  spmst.in  surfdata.txt
EXAMPLES/sichuan/: get_raydensity.py  gmt.history  out.cpt  plot.sh  spmst.in  veloctrue.in
EXAMPLES/timefield/: plot.sh  spmst.in  surfdata.txt
doc/: UserManual.md
example/: frechet.out  gmt.history  plot.sh  spmst.in  velocinit.in  veloctrue.in
example-sichuan/: generate_veloc.py  plot.sh  spmst.in  surfdata.txt.30s  surfdata.txt.6s  velocinit.in
examples/accuracy/: generate_topo.py  generate_veloc.py  get_figure.sh  gmt.conf  gmt.history  plot_accuracy.sh  plot_traveltime.sh  run.py  spmst.in  test.ipynb  time.homo.out  time.out  time_20-13.grd  topo.txt  veloc.in  veloc.out  veloc.vtk
examples/checkerboard_2d/: gmt.history  plot_relative_model.sh  spmst2D.in  surfdata.txt  topo.txt  velocinit.in  veloctrue.in
examples/checkerboard_2d/utils/: generate_veloc2d.py
examples/checkerboard_3d/: spmst3D.in  surfdata.txt  topo.txt  velocinit.in  veloctrue.in
examples/checkerboard_3d/utils/: generate_topo.py  generate_veloc3d.py
examples/syn2d/: gmt.history  plot_traveltime.sh  surfdata.txt  time.homo.out  time.out  topo.txt  topo.vtk  veloc.txt
include/: invparam.hpp  numerical.hpp  spm2d.hpp  spmst.hpp
src/SWD/: CMakeLists.txt  slegn96.f90  surfdisp96.f  swd.hpp
src/clsqr2/: CMakeLists.txt  aprod.cpp  aprod.hpp  cblas.hpp  clsqr2.hpp  clsqr_const.hpp  lsqr.cpp  lsqr.hpp  lsqrblas.cpp
src/shared/: CMakeLists.txt  IO.cpp  IO.hpp  bilinear.cpp  bilinear.hpp  csr_matrix.cpp  csr_matrix.hpp  gaussian.cpp  gaussian.hpp  gps2dist.cpp  gps2dist.hpp  invparam.cpp  parallel_tools.cpp  parallel_tools.hpp
src/spm2d/: CMakeLists.txt  compute.cpp  compute_distance.cpp  compute_length.cpp  initialize.cpp  io.cpp  main.cpp  main.cpp1  spm2d.cpp  spm2d.hpp
src/spmst/: initialize.cpp  io.cpp  main.cpp  spmst.cpp
src/spmst2D/: CMakeLists.txt  initialize.cpp  io.cpp  main.cpp  spmst.cpp  spmst2D.hpp
src/spmst3D/: CMakeLists.txt  compute_swd.cpp  initialize.cpp  io.cpp  main.cpp  spmst3D.hpp  tomography.cpp
utils/: generate_topo.py  generate_veloc2d.py  generate_veloc3d.py  get_horiz_slice.py  interp.py  lcurve.py  out2init.py  smooth_topo.py
